:art: First run pre-commit
Execute pre-commit hooks on all files to uniformize the code from now